# CHR24-image-retrieval

./: .gitignore  Makefile  README.md  pyproject.toml
data/: image_retrieval_results.csv  labelled_data.json  test_fold_estimated_labels.csv
data/analysis/quantitative/: urls.csv
label-studio/: template.xml
notebooks/: Automatic image labelling.ipynb  Exact image retrieval accuracy.ipynb  Example queries for image retrieval.ipynb  Timing webapp.ipynb
