[project]
name = "chr24-nln-image-retrieval"
version = "0.1.0"
description = "Code used for our CHR24 paper on image retrieval"
authors = [
    {name = "Marie Roald", email = "marie.roald@nb.no"},
]
dependencies = [
    "label-studio>=1.12.1",
    "pyarrow>=16.1.0",
    "jupyterlab>=3.5.3",
    "tqdm>=4.66.4",
    "ipywidgets>=8.1.3",
    "transformers[torch]>=4.41.2",
    "sentencepiece>=0.2.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "jinja2>=3.1.4",
    "seaborn>=0.13.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
